# devman

./: CMakeLists.txt  README.md  build.sh  devman.cpp  devman.h  main.cpp  utils.h
cuda/: compile_cuda _x64.bat  kernel.cu
cuew/: cuew.c  cuew.h
gpu_code/: compile.sh  compile_cuda_x64.bat  greyscale.cu  kernel.cu  kernel.ptx
include/: devman.h  image.h  nvml.h  utils.h  version.h
src/: devman.cpp  image.cpp  main.cpp  nvml.cpp
utils/: CMakeLists.txt
utils/include/: charstring.h  color.h  error_code.h  progress.h  table.h  threadman.h  timer.h
utils/src/: color.cpp  image.cpp  progress.cpp
